# nutrition_ops

./: .dockerignore  .gitignore  README.md  app.py  build_dataset.py  check_container.py  clean_dataset.py  dockerfile  find_food.py  fix_mlflow.py  food_groups.csv  foods.csv  harvest.py  harvest_raw.json.dvc  label_foods.py  load_check.py  main.py  metadata.json  model_data.csv  pyproject.toml  solver.py  targets.csv  test_app.py  test_body.py  test_container.py  train_model.py
.dvc/: config
docs/: climax.md  epilogue.md  incident0.md  labeling.md  prologue.md
